Linux Realproducer requires emulation of the SOUND_MIXER_WRITE_RECSRC call, which is missing. Also included in the patch are a couple of other call patches for other linux audio programs (eg Debian aumix). How-To-Repeat: Try to run RealProducer Basic (from http://www.realnetworks.com/products/producer/ ) under Linux emulation. it fails, with kernel log message "May 14 01:17:13 streamer /kernel: linux: 'ioctl' fd=4, cmd=4dff ('M',255) not implemented"
I have applied your patch, so no more ioctl error message, but still not working: # /usr/local/realproducer-8.0/realproducer -l 2:1,0:0 -s server.express.ru:4040/test.rm -u live -p live1 -h "Some Author" -b "Some Title" -c Copyright -q Description -n "Key Words" -y 1 -z 0 -a 2 -v 0 -t 5 -in 1 -k 1 -nf 1 -r 1 -di 1 -lp 1 Source: Audio: Linux/OSS audio capture plug-in (/dev/dsp) [Line In] Output: server.express.ru:4040/test.rm Title: Some Title Author: Some Author Copyright: Copyright Keywords: Key Words Description: Description Target Audience: Corporate LAN Audio Format: Music No Video Allow Recording:Enabled Allow Download: Enabled Server Type: SureStream Encoding... ERROR: encoding failed, A General Error occurred. ------> Ending Run: Mon May 21 20:06:01 2001 # truss /usr/local/realproducer-8.0/realproducer -l 2:1,0:0 -s server.express.ru:4040/test.rm -u live -p live1 -h "Some Author" -b "Some Title" -c Copyright -q Description -n "Key Words" -y 1 -z 0 -a 2 -v 0 -t 5 -in 1 -k 1 -nf 1 -r 1 -di 1 -lp 1 | & fgrep \' ... linux_newlstat(0xbfbfc2d8,0xbfbfa220) ERR#2 'No such file or directory' linux_newlstat(0xbfbfc238,0xbfbfa180) ERR#2 'No such file or directory' linux_newlstat(0xbfbfc238,0xbfbfa180) ERR#2 'No such file or directory' read(0x3,0xbfbfe334,0x8) ERR#35 'Resource temporarily unavailable' linux_kill(0x32c,0x9) ERR#3 'No such process' linux_open("/tmp/fileuldiZt.rm",0,0600) ERR#2 'No such file or directory' linux_open("",0,0600) ERR#2 'No such file or directory' linux_open("",0,0600) ERR#2 'No such file or directory' linux_open("",0,0600) ERR#2 'No such file or directory' linux_open("",0,0600) ERR#2 'No such file or directory' # Any Ideas ? -- TSB Russian Express, Moscow Vladimir B. Grebenschikov, vova@express.ru
Responsible Changed From-To: freebsd-bugs->bms I'll field this
State Changed From-To: open->patched Committed to HEAD (with cleanups), thanks!
State Changed From-To: patched->closed RELENG_5 has now been branched as -STABLE