Add stub for Linux SOUND_MIXER_READ_RECMASK, required by some Linux sound applications.

PR:		misc/27471
Submitted by:	Gavin Atkinson (with cleanups)

Former-commit-id: 9e0c8e47aa353e931ca951f9afbd4bd053666fef